--- a/g-3 arciture.html
+++ b/g-3 arciture.html
@@ -4,15 +4,79 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body class="work-sans-font">
 
 
-    <header>
-        <nav>
-            <h1>G3 Architects</h1>
+    <header class="bg-light">
+        <nav class="nav_bar display-flex">
+            <h1 class="brand">G3 Architects</h1>
+
+
+            <ul class="nav_links display-flex">
+
+                                                      
+
+                <li class="nav-item"><a href="" class="nav-link text-gray">Home</a></li>
+                <li class="nav-item"><a href="" class="nav-link text-gray">About</a></li>
+                <li class="nav-item"><a href="" class="nav-link text-gray">Contact Us </a></li>
+                <li class="nav-item"><a href="" class="nav-link text-gray">Login</a></li>
+
+            </ul>
+
         </nav>
+
+        <div class="banner">
+   
+
+            <div class="banner-content">
+
+
+            <h1 class="banner-title">Brand New Group of Architects </h1>
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <button class="btn-primary">Explore More </button>
+
+            </div>
+
+
+            <img src="images/banner.png" alt="" class="banner-image">
+
+
+
+        </div>
     </header>
+
+    <main>
+
+        <section class="teams display-flex">
+
+            <div class="team-image-container">
+
+            <img src="images/team1.png" alt="">
+            <img src="images/team2.png" alt="">
+            <img src="images/team3.png" alt="">
+            <img src="images/team4.png" alt="">
+
+            </div>
+
+            <div class="our-feature">
+
+                <h3 class="feature-title"><span class="quick-list">Quick list</span> <span class="of-our">of Our</span> <br> Features</h3>
+                <p class="feature-discription">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+
+            </div>
+
+        </section>
+
+    </main>
+
+    <footer>
+
+
+
+    </footer>
     
 </body>
 </html>
